--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #ffef64;
   background-color: #646cff;
   color: white;
 }
